[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Enemy/World Enemy/World_Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enemy/World Enemy/World_Wood_Monster.gd" type="Script" id=2]
[ext_resource path="res://Assets/Animations/damage_anim.tres" type="Animation" id=3]
[ext_resource path="res://Assets/Animations/enemy_death.tres" type="Animation" id=4]
[ext_resource path="res://Sprites/wood_enemy.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "wood_down"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "wood_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "wood_up"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 13, 14, 15 ]
}

[node name="World_Wood_Monster" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 5 )
hframes = 4
vframes = 5
frame = 0

[node name="Body_Shape" parent="." index="1"]
position = Vector2( 0.5, 2.5 )

[node name="Area_Shape" parent="Area" index="0"]
position = Vector2( 0, 0.5 )

[node name="Enemy_Animation" parent="." index="4"]
anims/RESET = SubResource( 1 )
anims/damage_anim = ExtResource( 3 )
anims/enemy_death = ExtResource( 4 )

[node name="Shoot_Timer" type="Timer" parent="." index="5"]
autostart = true

[node name="Wood_Enemy_Animation" type="AnimationPlayer" parent="." index="6"]
playback_process_mode = 0
anims/wood_down = SubResource( 2 )
anims/wood_left = SubResource( 3 )
anims/wood_up = SubResource( 4 )

[connection signal="timeout" from="Shoot_Timer" to="." method="_on_Shoot_Timer_timeout"]
